fix: Fixed inconsistent audio playing on collapsed mode, b=closes #10531, c=tabs, compact-mode

--- a/src/browser/themes/shared/zen-icons/icons.css
+++ b/src/browser/themes/shared/zen-icons/icons.css
@@ -572,20 +572,14 @@
 /* tab sound icons */
 .tab-icon-overlay[soundplaying] {
   list-style-image: url('tab-audio-playing-small.svg') !important;
-  background-image: none !important;
-  fill: white !important;
 }
 
 .tab-icon-overlay[muted] {
   list-style-image: url('tab-audio-muted-small.svg') !important;
-  background-image: none !important;
-  fill: white !important;
 }
 
 .tab-icon-overlay[activemedia-blocked] {
   list-style-image: url('tab-audio-blocked-small.svg') !important;
-  background-image: none !important;
-  fill: white !important;
 }
 
 /* reload/stop animation */
