--- a/src/zen/tabs/zen-tabs/vertical-tabs.css
+++ b/src/zen/tabs/zen-tabs/vertical-tabs.css
@@ -794,28 +794,6 @@
       }
     }
 
-    @media -moz-pref('zen.view.sidebar-collapsed.hide-mute-button') {
-      & .tab-icon-overlay:is([soundplaying], [muted]):not([selected]) {
-        display: none !important;
-
-        :is(
-            :root[uidensity='compact'],
-            #tabbrowser-tabs[secondarytext-unsupported],
-            :root:not([uidensity='compact'])
-              #tabbrowser-tabs:not([secondarytext-unsupported])
-              .tabbrowser-tab:hover
-          )
-          .tab-icon-stack[indicator-replaces-favicon]
-          > :not(&),
-        :root:not([uidensity='compact'])
-          #tabbrowser-tabs:not([secondarytext-unsupported])
-          .tabbrowser-tab:not(:hover)
-          &[indicator-replaces-favicon] {
-          opacity: 1 !important;
-        }
-      }
-    }
-
     & .tab-throbber,
     & .tab-icon-pending,
     & .tab-icon-image,
